# MLProject

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
data/: ML-CUP19-TR_formatted.csv  ML-CUP19-TS_formatted.csv  test.csv
data/gridResult/: Grid2Hidden  Grid4h  GridResult1.txt  GridResult2.txt  GridResult_notte.txt  gridSearchResult_26
data/monk/: monk1_testset.csv  monk1_trainset.csv  monk2_testset.csv  monk2_trainset.csv  monk3_testset.csv  monk3_trainset.csv  monk_dataset.csv  monks1_test_formatted.csv  monks1_train_formatted.csv  monks2_test_formatted.csv  monks2_train_formatted.csv  monks3_test_formatted.csv  monks3_train_formatted.csv
docs/Consegna/: Neuradillo_ abstract.txt  Neuradillo_ML-CUP19-TS.csv
docs/report/: 2hl.txt  bibliografia.bib  con5hl.txt  modelSelected  monk1.txt  monk2.txt  of2  overfitting.txt  reg.txt  relazione.tex  test.txt
docs/report/sez/: abstract.tex  conclusions.tex  experiments.tex  introduction.tex  method.tex
grid/: gridResult
src/: layer.cpp
src/activationFunction/: activationFunction.cpp  activationFunction.h  linearFunction.cpp  linearFunction.h  logisticFunction.cpp  logisticFunction.h  reluFunction.cpp  reluFunction.h  tanhFunction.cpp  tanhFunction.h
src/crossValidation/: crossValidation.cpp  crossValidation.h
src/gridSearch/: gridSearch.cpp  gridSearch.h  parallelGridSearch.cpp  parallelGridSearch.h
src/layer/: layer.cpp  layer.h
src/load/: loadDataset.cpp  loadDataset.h
src/lossFunction/: binaryCrossentropy.cpp  binaryCrossentropy.h  lossFunction.h  meanEuclideanError.cpp  meanEuclideanError.h  meanSquaredError.cpp  meanSquaredError.h
src/network/: network.cpp  network.h
src/preprocessing/: preprocessing.cpp  preprocessing.h
uml/: MLProject.drawio
